--- a/valkey_cluster_setup/docker-compose.yaml
+++ b/valkey_cluster_setup/docker-compose.yaml
@@ -90,3 +90,17 @@ services:
     ports:
       - 7006:7006
       - 17006:17006
+
+  postgres:
+    container_name: postgres
+    image: postgres:17.4
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    restart: always
+    network_mode: host
+    expose:
+      - 5432
+    ports:
+      - 5432:5432
