--- a/valkey_cluster_setup/docker-compose.yaml
+++ b/valkey_cluster_setup/docker-compose.yaml
@@ -8,13 +8,22 @@ services:
     volumes:
       - ./valkey-1.conf:/etc/valkey.conf
     restart: always
-    network_mode: host
     expose:
       - 7001
       - 17001
     ports:
-      - 7001:7001
-      - 17001:17001
+      - "7001:7001"
+      - "7002:7002"
+      - "7003:7003"
+      - "7004:7004"
+      - "7005:7005"
+      - "7006:7006"
+      - "17001:17001"
+      - "17002:17002"
+      - "17003:17003"
+      - "17004:17004"
+      - "17005:17005"
+      - "17006:17006"
 
   valkey-2:
     container_name: valkey-2
@@ -23,13 +32,10 @@ services:
     volumes:
       - ./valkey-2.conf:/etc/valkey.conf
     restart: always
-    network_mode: host
+    network_mode: "service:valkey-1"
     expose:
       - 7002
       - 17002
-    ports:
-      - 7002:7002
-      - 17002:17002
 
   valkey-3:
     container_name: valkey-3
@@ -38,13 +44,10 @@ services:
     volumes:
       - ./valkey-3.conf:/etc/valkey.conf
     restart: always
-    network_mode: host
+    network_mode: "service:valkey-1"
     expose:
       - 7003
       - 17003
-    ports:
-      - 7003:7003
-      - 17003:17003
 
   valkey-4:
     container_name: valkey-4
@@ -53,13 +56,10 @@ services:
     volumes:
       - ./valkey-4.conf:/etc/valkey.conf
     restart: always
-    network_mode: host
+    network_mode: "service:valkey-1"
     expose:
       - 7004
       - 17004
-    ports:
-      - 7004:7004
-      - 17004:17004
 
   valkey-5:
     container_name: valkey-5
@@ -68,13 +68,10 @@ services:
     volumes:
       - ./valkey-5.conf:/etc/valkey.conf
     restart: always
-    network_mode: host
+    network_mode: "service:valkey-1"
     expose:
       - 7005
       - 17005
-    ports:
-      - 7005:7005
-      - 17005:17005
 
   valkey-6:
     container_name: valkey-6
@@ -83,13 +80,10 @@ services:
     volumes:
       - ./valkey-6.conf:/etc/valkey.conf
     restart: always
-    network_mode: host
+    network_mode: "service:valkey-1"
     expose:
       - 7006
       - 17006
-    ports:
-      - 7006:7006
-      - 17006:17006
 
   postgres:
     container_name: postgres
@@ -99,8 +93,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     restart: always
-    network_mode: host
+    network_mode: "service:valkey-1"
     expose:
       - 5432
     ports:
-      - 5432:5432
+      - "5432:5432"
